Rewrite in JavaScript
Asynchronous support in Python's serial libraries was too flaky

--- a/systemd/eda-modbus-bridge.service
+++ b/systemd/eda-modbus-bridge.service
@@ -4,7 +4,7 @@ Description=HTTP bridge for Enervent ventilation units with EDA automation
 [Service]
 User=eda
 Group=eda
-ExecStart=/usr/bin/python3 /home/eda/eda-modbus-bridge/edamodbusbridge/app.py /dev/ttyUSB0 --verbose --httpListenPort 9090
+ExecStart=/usr/bin/node /home/eda/eda-modbus-bridge/eda-modbus-bridge.mjs -d /dev/ttyUSB0 -p 9090
 
 [Install]
 WantedBy=multi-user.target
