--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "eda-modbus-bridge",
   "version": "1.0.0",
-  "description": "An HTTP bridge for Enervent ventilation units with EDA automation",
+  "description": "An HTTP/MQTT bridge for Enervent ventilation units with EDA automation",
   "main": "eda-modbus-bridge.mjs",
   "directories": {
     "doc": "docs"
