--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -1,10 +1,10 @@
-name: Run tests
+name: Run linters
 
 on: [ push, pull_request ]
 
 jobs:
-  test:
-    name: Run tests
+  prettier:
+    name: Check formatting with Prettier
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -14,5 +14,5 @@ jobs:
           node-version: '14.x'
       - name: Install dependencies
         run: npm ci
-      - name: Run tests
-        run: npm test
+      - name: Check formatting
+        run: npm run check-prettier
