--- a/systemd/eda-modbus-bridge.service
+++ b/systemd/eda-modbus-bridge.service
@@ -2,8 +2,7 @@
 Description=HTTP bridge for Enervent ventilation units with EDA automation
 
 [Service]
-User=eda
-Group=eda
+Type=simple
 ExecStart=/usr/bin/node /home/eda/eda-modbus-bridge/eda-modbus-bridge.mjs -d /dev/ttyUSB0 -p 9090
 
 [Install]
