Add a step that runs the program to the test suite
Should help catch weird issues after dependency updates by Dependabot

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -25,3 +25,5 @@ jobs:
         run: npm ci
       - name: Run tests
         run: npm test
+      - name: Verify program runs correctly
+        run: node eda-modbus-bridge.mjs --help
