--- a/package.json
+++ b/package.json
@@ -25,8 +25,9 @@
     "async-mqtt": "^2.6.1",
     "async-mutex": "^0.3.1",
     "express": "^4.18.2",
+    "express-winston": "^4.2.0",
     "modbus-serial": "^8.0.11",
-    "morgan": "^1.10.0",
+    "winston": "^3.10.0",
     "yargs": "^16.2.0"
   },
   "devDependencies": {
