--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "express": "^4.18.2",
     "express-winston": "^4.2.0",
     "modbus-serial": "^8.0.11",
+    "serialport": "^11.0.1",
     "winston": "^3.10.0",
     "yargs": "^16.2.0"
   },
