Add no-undef ESLint rule to catch silly "missing import" errors

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,6 +8,7 @@
         "sourceType": "module"
     },
     "rules": {
-        "no-console": "error"
+        "no-console": "error",
+        "no-undef": "error"
     }
 }
