--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,6 +7,7 @@
         "ecmaVersion": "latest",
         "sourceType": "module"
     },
+    "extends": "eslint:recommended",
     "rules": {
         "no-console": "error",
         "no-undef": "error"
