--- a/package.json
+++ b/package.json
@@ -26,11 +26,11 @@
     "node": ">= 14"
   },
   "dependencies": {
-    "async-mqtt": "^2.6.1",
     "async-mutex": "^0.3.1",
     "express": "^4.18.2",
     "express-winston": "^4.2.0",
     "modbus-serial": "^8.0.11",
+    "mqtt": "^5.3.4",
     "serialport": "^11.0.1",
     "winston": "^3.10.0",
     "yargs": "^16.2.0"
