--- a/package.json
+++ b/package.json
@@ -34,10 +34,11 @@
     "mqtt": "^5.3.4",
     "serialport": "^11.0.1",
     "winston": "^3.10.0",
-    "yargs": "^16.2.0"
+    "yargs": "^17.7.2"
   },
   "devDependencies": {
     "@tsconfig/node14": "^14.1.2",
+    "@types/express": "^4.17.21",
     "@types/jest": "^29.5.12",
     "@typescript-eslint/eslint-plugin": "^8.1.0",
     "@typescript-eslint/parser": "^8.1.0",
