Switch to @typescript-eslint/recommended-type-checked
Some complaints have been ignored

--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "modbus-serial": "^8.0.11",
     "mqtt": "^5.3.4",
     "serialport": "^11.0.1",
+    "set-interval-async": "^3.0.3",
     "winston": "^3.10.0",
     "yargs": "^17.7.2"
   },
