--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,12 +5,14 @@
     },
     "extends": [
         "eslint:recommended",
-        "plugin:@typescript-eslint/recommended"
+        "plugin:@typescript-eslint/recommended-type-checked"
     ],
     "parser": "@typescript-eslint/parser",
     "parserOptions": {
         "ecmaVersion": "latest",
-        "sourceType": "module"
+        "sourceType": "module",
+        "projectService": true,
+        "tsconfigRootDir": "."
     },
     "plugins": [
         "@typescript-eslint"
